発音フィードバック処理を追加
